@@ -1,5 +1,8 @@
 2021-03-24  Allen D. Ball  <ball@hcf.dev>
 
+	* Added mechanism for known dependencies.  Support current Spark
+	releases.
+
 	* src/main/java/ganymede/dependency/Analyzer.java:
 	Added parse(InputStream) method.
 
